Rewrote df classification client.